# ChessLPM

./: CMakeLists.txt  README.md  calculBoard.cpp  calculBoard.hpp  main.cpp  main.hpp  resources.qrc  visualBoard.cpp
src/board/: calculBoard.cpp  calculBoard.hpp  piece.hpp  visualBoard.cpp  visualBoard.hpp
src/promotion/: calculPromotion.cpp  calculPromotion.hpp  visualPromotion.cpp  visualPromotion.hpp
src/tree/: tree.cpp  tree.hpp
src/ui/: app.cpp  app.hpp
